# crowemi

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  config.docker.json  config.local.json  crowemi.conf  crowemi.ini  crowemi.py  crowemi.service  custom.css  custom.css.map  custom.scss  helper.py  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  start.py  start.sh  tailwind.config.js  tsconfig.tsbuildinfo  wsgi.py
.github/prompts/: plan-footerNewsletter.prompt.md
.github/workflows/: deploy-image.yml  dev.yml  main.yml  prod.yml  terraform-plan.yaml
.sass-cache/6bf73cbd514a48a281446fc187e612759857d811/: custom.scssc
app/: globals.css  layout.tsx  page.tsx
app/data/: blogPosts.ts
app/lib/: blog.ts  config.ts  config.tsx  firestore.ts  newsletter.ts  notion-renderer.ts  notion.ts  storage.ts
blog/: blog.ini  blog.py  config.json  wsgi.py
conf/: crowemi.conf
cron/: capture_twitter_followers.py
crowemi/: crowemi.py
helper/: aws.py  strava.py  twitter.py
infra/: firestore.tf  iam.tf  main.tf  policy.tf  providers.tf  registry.tf  storage.tf  terraform.tf  variables.tf
public/: index.html  manifest.json
service/: blog.service  crowemi.service
src/: App.js  crowemi.scss  custom.scss  index.js
templates/: base.html  blog.html  blog_folder.html  blog_home.html  blog_menu.html  blog_menu_root.html  blog_menu_sub.html  blog_mobile.html  blog_nav.html  blog_page.html  footer.html  header.html  home.html  javascript.html  nav.html  social.html
tests/: test_aws.py  test_cron.py  test_twitter.py  test_web3.py
(+16 files in other folders)
