[tool.poetry]
name = "crowemi"
version = "1.0.2"
description = ""
authors = ["crowemi <crowemi@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "~2.0.0"
requests = "^2.28.1"
pytest = "^7.1.2"
pytest-env = "^0.6.2"
web3 = {extras = ["tester"], version = "^5.30.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
